tests/ui/diagnostic_namespace/on_move/report_warning_on_malformed_options_without_literals.stderr
warning: expected a literal or missing delimiter
  --> $DIR/report_warning_on_malformed_options_without_literals.rs:1:22
   |
LL |   #[diagnostic::on_move(
   |  ______________________^
LL | |
LL | |
LL | |     message = Foo,
LL | |     label = "Bar",
LL | | )]
   | |_^
   |
   = help: only literals are allowed as values of `message` and `label`, separated by a comma
   = note: `#[warn(malformed_diagnostic_attributes)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

error[E0382]: use of moved value: `foo`
  --> $DIR/report_warning_on_malformed_options_without_literals.rs:14:15
   |
LL |     let foo = Foo;
   |         --- move occurs because `foo` has type `Foo`, which does not implement the `Copy` trait
LL |     takes_foo(foo);
   |               --- value moved here
LL |     let bar = foo;
   |               ^^^ value used here after move
   |
note: consider changing this parameter type in function `takes_foo` to borrow instead if owning the value isn't necessary
  --> $DIR/report_warning_on_malformed_options_without_literals.rs:9:17
   |
LL | fn takes_foo(_: Foo) {}
   |    ---------    ^^^ this parameter takes ownership of the value
   |    |
   |    in this function
note: if `Foo` implemented `Clone`, you could clone the value
  --> $DIR/report_warning_on_malformed_options_without_literals.rs:7:1
   |
LL | struct Foo;
   | ^^^^^^^^^^ consider implementing `Clone` for this type
...
LL |     takes_foo(foo);
   |               --- you could clone this value

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0382`.
